--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>This is the first Title</h1>
-    
+        <h4>this is another title on Jacob branch</h4>
+        <div>
+            <h2>Hi</h2>
+        </div>
 </body>
 </html>
